@@ -2,9 +2,13 @@ ChangeLog for PyLint
 ====================
 
 --
-    * add support for --disable=all option (#105327)
 
-    * deprecate the 'disable-all' inline directive in favour of 'skip-file'
+    * #20693: replace pylint.el by Ian Eure version (patch by J.Kotta)
+
+    * #105327: add support for --disable=all option and deprecate the
+      'disable-all' inline directive in favour of 'skip-file' (patch by
+      A.Fayolle)
+
 
 2012-10-05  --  0.26.0
     * #106534: add --ignore-imports option to code similarity checking
